frontend/kiwiParser.py
"""
This module represents the second step of compiler frontend.
It compiles lexer tokens into an Abstract Syntax Tree.
It can be used to preprocess some macros for example.
"""

from __future__ import annotations

# Default libraries
# -----------------

from typing import Any, Optional
from itertools import chain

# Custom libraries
# ----------------

from pegen.parser import memoize, memoize_left_rec, Parser
from pegen.tokenizer import Tokenizer
from typing import List as _List
import components.kiwiASO as kiwi


class AST:
    """
    This class represents the second step of compiler frontend.
    """

    parser: KiwiParser
    module: kiwi.Module

    def __init__(self, tokenizer: Tokenizer):
        self.parser = KiwiParser(tokenizer)
        self.module = self.parser.start()

    def eval(self, tokenizer: Tokenizer) -> kiwi.expression:
        return KiwiParser(tokenizer).expression()

    def exec(self, tokenizer: Tokenizer) -> _List[kiwi.statement]:
        return KiwiParser(tokenizer).start().body


#
# Keywords and soft keywords are listed at the end of the parser definition.
class KiwiParser(Parser):

    @memoize
    def start(self) -> Optional[kiwi . Module]:
        # start: import_stmts statements $ | import_stmts $ | statements $ | $
        mark = self._mark()
        if (
            (i := self.import_stmts())
            and
            (v := self.statements())
            and
            (_endmarker := self.expect('ENDMARKER'))
        ):
            return i [0] . start , v [- 1] . end , kiwi . Module ( i , v )
        self._reset(mark)
        if (
            (i := self.import_stmts())
            and
            (_endmarker := self.expect('ENDMARKER'))
        ):
            return kiwi . Module ( i [0] . start , i [- 1] . end , i , [] )
        self._reset(mark)
        if (
            (v := self.statements())
            and
            (_endmarker := self.expect('ENDMARKER'))
        ):
            return kiwi . Module ( v [0] . start , v [- 1] . end , [] , v )
        self._reset(mark)
        if (
            (_endmarker := self.expect('ENDMARKER'))
        ):
            return kiwi . Module ( ... , ... , [] , [] )
        self._reset(mark)
        return None

    @memoize
    def import_stmts(self) -> Optional[Any]:
        # import_stmts: ((import_stmt | from_import_stmt))+
        mark = self._mark()
        if (
            (v := self._loop1_1())
        ):
            return list ( chain . from_iterable ( v ) )
        self._reset(mark)
        return None

    @memoize
    def import_stmt(self) -> Optional[Any]:
        # import_stmt: "import" dotted_as_names ((NEWLINE | ';'))+
        mark = self._mark()
        if (
            (literal := self.expect("import"))
            and
            (v := self.dotted_as_names())
            and
            (_loop1_2 := self._loop1_2())
        ):
            return v
        self._reset(mark)
        return None

    @memoize
    def from_import_stmt(self) -> Optional[Any]:
        # from_import_stmt: "from" dotted_name import_stmt
        mark = self._mark()
        if (
            (s := self.expect("from"))
            and
            (v := self.dotted_name())
            and
            (a := self.import_stmt())
        ):
            return [s . start , a [- 1] . end , kiwi . Alias ( '' . join ( v ) , a )]
        self._reset(mark)
        return None

    @memoize
    def dotted_as_names(self) -> Optional[Any]:
        # dotted_as_names: ','.dotted_as_name+
        mark = self._mark()
        if (
            (_gather_3 := self._gather_3())
        ):
            return _gather_3
        self._reset(mark)
        return None

    @memoize
    def dotted_as_name(self) -> Optional[Any]:
        # dotted_as_name: dotted_name "as" NAME_ | dotted_name
        mark = self._mark()
        if (
            (v := self.dotted_name())
            and
            (literal := self.expect("as"))
            and
            (a := self.NAME_())
        ):
            return kiwi . Alias ( v [0] . start , a . end , '' . join ( v ) , a )
        self._reset(mark)
        if (
            (v := self.dotted_name())
        ):
            return kiwi . Alias ( v [0] . start , v [- 1] . end , '' . join ( v ) , v [- 1] )
        self._reset(mark)
        return None

    @memoize_left_rec
    def dotted_name(self) -> Optional[Any]:
        # dotted_name: dotted_name '.' NAME_ | NAME_
        mark = self._mark()
        if (
            (v := self.dotted_name())
            and
            (literal := self.expect('.'))
            and
            (a := self.NAME_())
        ):
            return [* v , a]
        self._reset(mark)
        if (
            (v := self.NAME_())
        ):
            return [v]
        self._reset(mark)
        return None

    @memoize
    def statements(self) -> Optional[Any]:
        # statements: statement+
        mark = self._mark()
        if (
            (_loop1_5 := self._loop1_5())
        ):
            return _loop1_5
        self._reset(mark)
        return None

    @memoize
    def statement(self) -> Optional[Any]:
        # statement: simple_stmt ((NEWLINE | ';'))+ | compound_stmt
        mark = self._mark()
        if (
            (v := self.simple_stmt())
            and
            (_loop1_6 := self._loop1_6())
        ):
            return v
        self._reset(mark)
        if (
            (v := self.compound_stmt())
        ):
            return v
        self._reset(mark)
        return None

    @memoize
    def statement_newline(self) -> Optional[Any]:
        # statement_newline: simple_stmt (NEWLINE)+
        mark = self._mark()
        if (
            (v := self.simple_stmt())
            and
            (_loop1_7 := self._loop1_7())
        ):
            return v
        self._reset(mark)
        return None

    @memoize
    def simple_stmt(self) -> Optional[Any]:
        # simple_stmt: assignment | expression | return_stmt | 'pass' | 'break' | 'continue'
        mark = self._mark()
        if (
            (assignment := self.assignment())
        ):
            return assignment
        self._reset(mark)
        if (
            (expression := self.expression())
        ):
            return expression
        self._reset(mark)
        if (
            (return_stmt := self.return_stmt())
        ):
            return return_stmt
        self._reset(mark)
        if (
            (s := self.expect('pass'))
        ):
            return kiwi . Pass ( s . start , s . end )
        self._reset(mark)
        if (
            (s := self.expect('break'))
        ):
            return kiwi . Break ( s . start , s . end )
        self._reset(mark)
        if (
            (s := self.expect('continue'))
        ):
            return kiwi . Continue ( s . start , s . end )
        self._reset(mark)
        return None

    @memoize
    def compound_stmt(self) -> Optional[Any]:
        # compound_stmt: function_def | namespace_def | if_stmt | for_classic_stmt | for_iterator_stmt | while_stmt | match_stmt
        mark = self._mark()
        if (
            (function_def := self.function_def())
        ):
            return function_def
        self._reset(mark)
        if (
            (namespace_def := self.namespace_def())
        ):
            return namespace_def
        self._reset(mark)
        if (
            (if_stmt := self.if_stmt())
        ):
            return if_stmt
        self._reset(mark)
        if (
            (for_classic_stmt := self.for_classic_stmt())
        ):
            return for_classic_stmt
        self._reset(mark)
        if (
            (for_iterator_stmt := self.for_iterator_stmt())
        ):
            return for_iterator_stmt
        self._reset(mark)
        if (
            (while_stmt := self.while_stmt())
        ):
            return while_stmt
        self._reset(mark)
        if (
            (match_stmt := self.match_stmt())
        ):
            return match_stmt
        self._reset(mark)
        return None

    @memoize
    def assignment(self) -> Optional[Any]:
        # assignment: annotations '=' ','.expression+ | ','.expression+ '=' ','.expression+ | ','.expression+ augassign ','.expression+ | annotations
        mark = self._mark()
        if (
            (a := self.annotations())
            and
            (literal := self.expect('='))
            and
            (v := self._gather_8())
        ):
            return kiwi . AnnAssignment ( a [0] [0] . start , v [- 1] . end , * a , v )
        self._reset(mark)
        if (
            (i := self._gather_10())
            and
            (literal := self.expect('='))
            and
            (v := self._gather_12())
        ):
            return kiwi . Assignment ( i [0] . start , v [- 1] . end , i , v )
        self._reset(mark)
        if (
            (i := self._gather_14())
            and
            (o := self.augassign())
            and
            (v := self._gather_16())
        ):
            return kiwi . AugAssignment ( i [0] . start , v [- 1] . end , i , o , v )
        self._reset(mark)
        if (
            (a := self.annotations())
        ):
            return kiwi . Annotation ( a [0] [0] . start , a [2] [- 1] . end if a [2] else a [1] . end , * a )
        self._reset(mark)
        return None

    @memoize
    def annotations(self) -> Optional[Any]:
        # annotations: expression ':' expression+ | ','.expression+ '->' expression+
        mark = self._mark()
        if (
            (i := self.expression())
            and
            (literal := self.expect(':'))
            and
            (a := self._loop1_18())
        ):
            return [i] , a [0] , a [1 :]
        self._reset(mark)
        if (
            (i := self._gather_19())
            and
            (literal := self.expect('->'))
            and
            (a := self._loop1_21())
        ):
            return i , a [0] , a [1 :]
        self._reset(mark)
        return None

    @memoize
    def augassign(self) -> Optional[Any]:
        # augassign: '+=' | '-=' | '*=' | '/=' | '%='
        mark = self._mark()
        if (
            (s := self.expect('+='))
        ):
            return kiwi . Token ( s . start , s . end , '+=' )
        self._reset(mark)
        if (
            (s := self.expect('-='))
        ):
            return kiwi . Token ( s . start , s . end , '-=' )
        self._reset(mark)
        if (
            (s := self.expect('*='))
        ):
            return kiwi . Token ( s . start , s . end , '*=' )
        self._reset(mark)
        if (
            (s := self.expect('/='))
        ):
            return kiwi . Token ( s . start , s . end , '/=' )
        self._reset(mark)
        if (
            (s := self.expect('%='))
        ):
            return kiwi . Token ( s . start , s . end , '%=' )
        self._reset(mark)
        return None

    @memoize
    def return_stmt(self) -> Optional[Any]:
        # return_stmt: 'return' expression | 'return'
        mark = self._mark()
        if (
            (s := self.expect('return'))
            and
            (v := self.expression())
        ):
            return kiwi . Return ( s . start , v . end , v )
        self._reset(mark)
        if (
            (s := self.expect('return'))
        ):
            return kiwi . Return ( s . start , s . end , None )
        self._reset(mark)
        return None

    @memoize
    def block(self) -> Optional[Any]:
        # block: NEWLINE INDENT statements DEDENT NEWLINE | statement_newline
        mark = self._mark()
        if (
            (_newline := self.expect('NEWLINE'))
            and
            (_indent := self.expect('INDENT'))
            and
            (v := self.statements())
            and
            (_dedent := self.expect('DEDENT'))
            and
            (_newline_1 := self.expect('NEWLINE'))
        ):
            return v
        self._reset(mark)
        if (
            (v := self.statement_newline())
        ):
            return [v]
        self._reset(mark)
        return None

    @memoize
    def hiding_block(self) -> Optional[Any]:
        # hiding_block: NEWLINE INDENT blocks DEDENT NEWLINE
        mark = self._mark()
        if (
            (_newline := self.expect('NEWLINE'))
            and
            (_indent := self.expect('INDENT'))
            and
            (v := self.blocks())
            and
            (_dedent := self.expect('DEDENT'))
            and
            (_newline_1 := self.expect('NEWLINE'))
        ):
            return v
        self._reset(mark)
        return None

    @memoize
    def blocks(self) -> Optional[Any]:
        # blocks: ((private_block | public_block | default_block))+
        mark = self._mark()
        if (
            (_loop1_22 := self._loop1_22())
        ):
            return _loop1_22
        self._reset(mark)
        return None

    @memoize
    def private_block(self) -> Optional[Any]:
        # private_block: 'private' ':' block
        mark = self._mark()
        if (
            (s := self.expect('private'))
            and
            (literal := self.expect(':'))
            and
            (v := self.block())
        ):
            return kiwi . PrivateBlock ( s . start , v [- 1] . end , v )
        self._reset(mark)
        return None

    @memoize
    def public_block(self) -> Optional[Any]:
        # public_block: 'public' ':' block
        mark = self._mark()
        if (
            (s := self.expect('public'))
            and
            (literal := self.expect(':'))
            and
            (v := self.block())
        ):
            return kiwi . PublicBlock ( s . start , v [- 1] . end , v )
        self._reset(mark)
        return None

    @memoize
    def default_block(self) -> Optional[Any]:
        # default_block: statements
        mark = self._mark()
        if (
            (v := self.statements())
        ):
            return kiwi . DefaultBlock ( v [0] . start , v [- 1] . end , v )
        self._reset(mark)
        return None

    @memoize
    def namespace_def(self) -> Optional[Any]:
        # namespace_def: 'namespace' NAME_ ':' hiding_block
        mark = self._mark()
        if (
            (s := self.expect('namespace'))
            and
            (i := self.NAME_())
            and
            (literal := self.expect(':'))
            and
            (b := self.hiding_block())
        ):
            return kiwi . NamespaceDef ( s . start , b [- 1] . end , i , b )
        self._reset(mark)
        return None

    @memoize
    def function_def(self) -> Optional[Any]:
        # function_def: 'function' NAME_ '(' parameters ')' '->' return_param '<' '-' expression ':' block | 'function' NAME_ '(' parameters ')' '<' '-' expression ':' block | 'function' NAME_ '(' parameters ')' '->' return_param ':' block | 'function' NAME_ '(' parameters ')' ':' block
        mark = self._mark()
        if (
            (s := self.expect('function'))
            and
            (i := self.NAME_())
            and
            (literal := self.expect('('))
            and
            (p := self.parameters())
            and
            (literal_1 := self.expect(')'))
            and
            (literal_2 := self.expect('->'))
            and
            (r := self.return_param())
            and
            (literal_3 := self.expect('<'))
            and
            (literal_4 := self.expect('-'))
            and
            (pr := self.expression())
            and
            (literal_5 := self.expect(':'))
            and
            (b := self.block())
        ):
            return kiwi . FuncDef ( s . start , b [- 1] . end , i , p [0] , p [1] , r , pr , b )
        self._reset(mark)
        if (
            (s := self.expect('function'))
            and
            (i := self.NAME_())
            and
            (literal := self.expect('('))
            and
            (p := self.parameters())
            and
            (literal_1 := self.expect(')'))
            and
            (literal_2 := self.expect('<'))
            and
            (literal_3 := self.expect('-'))
            and
            (pr := self.expression())
            and
            (literal_4 := self.expect(':'))
            and
            (b := self.block())
        ):
            return kiwi . FuncDef ( s . start , b [- 1] . end , i , p [0] , p [1] , None , pr , b )
        self._reset(mark)
        if (
            (s := self.expect('function'))
            and
            (i := self.NAME_())
            and
            (literal := self.expect('('))
            and
            (p := self.parameters())
            and
            (literal_1 := self.expect(')'))
            and
            (literal_2 := self.expect('->'))
            and
            (r := self.return_param())
            and
            (literal_3 := self.expect(':'))
            and
            (b := self.block())
        ):
            return kiwi . FuncDef ( s . start , b [- 1] . end , i , p [0] , p [1] , r , None , b )
        self._reset(mark)
        if (
            (s := self.expect('function'))
            and
            (i := self.NAME_())
            and
            (literal := self.expect('('))
            and
            (p := self.parameters())
            and
            (literal_1 := self.expect(')'))
            and
            (literal_2 := self.expect(':'))
            and
            (b := self.block())
        ):
            return kiwi . FuncDef ( s . start , b [- 1] . end , i , p [0] , p [1] , None , None , b )
        self._reset(mark)
        return None

    @memoize
    def parameters(self) -> Optional[Any]:
        # parameters: param_no_default* param_with_default*
        # nullable=True
        mark = self._mark()
        if (
            (p := self._loop0_23(),)
            and
            (d := self._loop0_24(),)
        ):
            return [* p , * map ( lambda x : x [0] , d )] , list ( map ( lambda x : x [1] , d ) )
        self._reset(mark)
        return None

    @memoize
    def param_no_default(self) -> Optional[Any]:
        # param_no_default: annotations ',' | annotations &')' | '=' NAME_ ',' | '=' NAME_ &')'
        mark = self._mark()
        if (
            (v := self.annotations())
            and
            (literal := self.expect(','))
        ):
            return kiwi . Parameter ( v [0] [0] . start , v [2] [- 1] . end if v [- 1] else v [1] . end , v [0] , v [1] , v [2] )
        self._reset(mark)
        if (
            (v := self.annotations())
            and
            self.positive_lookahead(self.expect, ')')
        ):
            return kiwi . Parameter ( v [0] [0] . start , v [2] [- 1] . end if v [- 1] else v [1] . end , v [0] , v [1] , v [2] )
        self._reset(mark)
        if (
            (s := self.expect('='))
            and
            (i := self.NAME_())
            and
            (literal := self.expect(','))
        ):
            return kiwi . RefParameter ( s . start , i . end , i )
        self._reset(mark)
        if (
            (s := self.expect('='))
            and
            (i := self.NAME_())
            and
            self.positive_lookahead(self.expect, ')')
        ):
            return kiwi . RefParameter ( s . start , i . end , i )
        self._reset(mark)
        return None

    @memoize
    def param_with_default(self) -> Optional[Any]:
        # param_with_default: annotations '=' expression ',' | annotations '=' expression &')' | '=' NAME_ '=' expression ',' | '=' NAME_ '=' expression &')'
        mark = self._mark()
        if (
            (a := self.annotations())
            and
            (literal := self.expect('='))
            and
            (v := self.expression())
            and
            (e := self.expect(','))
        ):
            return kiwi . Parameter ( a [0] [0] . start , v . end , a [0] , a [1] , a [2] ) , v
        self._reset(mark)
        if (
            (a := self.annotations())
            and
            (literal := self.expect('='))
            and
            (v := self.expression())
            and
            self.positive_lookahead(self.expect, ')')
        ):
            return kiwi . Parameter ( a [0] [0] . start , v . end , a [0] , a [1] , a [2] ) , v
        self._reset(mark)
        if (
            (s := self.expect('='))
            and
            (i := self.NAME_())
            and
            (literal := self.expect('='))
            and
            (v := self.expression())
            and
            (literal_1 := self.expect(','))
        ):
            return kiwi . RefParameter ( s . start , v . end , i ) , v
        self._reset(mark)
        if (
            (s := self.expect('='))
            and
            (i := self.NAME_())
            and
            (literal := self.expect('='))
            and
            (v := self.expression())
            and
            self.positive_lookahead(self.expect, ')')
        ):
            return kiwi . RefParameter ( s . start , v . end , i ) , v
        self._reset(mark)
        return None
